# abot-microservices

./: .pre-commit-config.yaml  pyproject.toml
abot-statapi/: .env.example  Dockerfile  README.md  pyproject.toml
abot-statapi/abot_statapi/app/: app_factory.py
abot-statapi/abot_statapi/app/config/: __init__.py  depends.py  models.py  settings.py
abot-statapi/abot_statapi/app/resources/: routes.py
abot-statapi/abot_statapi/app/resources/statistics/: models.py  routes.py  services.py  views.py
abot-statapi/config/: debug-logger.yml
abot-statapi/docker-scripts/: entrypoint.sh  requirements.txt
abot-statapi/tests/: test_statistics.py
