[tool.poetry]
name = "abot-statapi"
version = "0.1.0"
description = ""
authors = ["Narayan Bandodker <narayan.b@phaidelta.com>"]
readme = "README.md"


[tool.poetry.dependencies]
# Main dependencies

python = "^3.12"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
platformdirs = "^4.2.1"
fastapi = "^0.111.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
tqdm = "^4.66.4"
pyyaml = "^6.0.2"
pandas = "^2.3.2"


[tool.poetry.group.test]
# Testing dependencies
optional = true

[tool.poetry.group.test.dependencies]
# Pytest for VSCode test-suite compatibility
pytest = "^8.1.1"


[tool.poetry.group.dev]
# Development dependencies
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
pre-commit = "^3.7.0"
watchfiles = "^0.21.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
